--- a/config/gun.conf
+++ b/config/gun.conf
@@ -7,7 +7,7 @@ threads = 4
 # 监听内网端口80
 bind = '0.0.0.0:80'
 # 工作模式协程
-worker_class = 'eventlet' #'gevent'
+worker_class = 'gevent' #'gevent'
 # 设置最大并发量
 worker_connections = 2000
 # 设置进程文件目录
