--- a/config/config.yaml
+++ b/config/config.yaml
@@ -7,7 +7,8 @@ COMMON: &common #标识
 
   # 数据库连接
   # SQLALCHEMY_DATABASE_URI: 'mysql+pymysql://aning:2001314djnDJN@hk-mysql.mysql.database.azure.com:3306/ore_detection?charset=utf8mb4&ssl_verify_cert=false'
-  SQLALCHEMY_DATABASE_URI: 'mysql+pymysql://root:2001314djn@localhost:3306/ore_detection?charset=utf8mb4&ssl_verify_cert=false'
+  # SQLALCHEMY_DATABASE_URI: 'mysql+pymysql://root:2001314djn@localhost:3306/ore_detection?charset=utf8mb4&ssl_verify_cert=false'
+  SQLALCHEMY_DATABASE_URI: 'sqlite:///ore_detection.db'
   SQLALCHEMY_TRACK_MODIFICATIONS: False
   # 日志配置文件路径
   LOGGING_CONFIG_PATH: ./config/logging.yaml
@@ -31,3 +32,4 @@ PRODUCTION: &production
   <<: *common
   SECRET_KEY: mdd1##$$%^!DSA#FDSF
   REDIS_HOST: flask_redis
+  SQLALCHEMY_DATABASE_URI: 'mysql+pymysql://aning:2001314djnDJN@hk-mysql.mysql.database.azure.com:3306/ore_detection?charset=utf8mb4&ssl_verify_cert=false'
