--- a/config/msg.yaml
+++ b/config/msg.yaml
@@ -1,6 +1,7 @@
 zh_CN: &zh
   0: "成功"
   -1: "失败"
+  40000: "系统异常"
   40001: "资源不存在"
   40002: "参数无效"
   40003: "账户或密码错误"
@@ -10,12 +11,14 @@ zh_CN: &zh
   40007: "验证码过期"
   40008: "手机号错误"
   40009: "操作频繁,请稍后再试:"
+  40010: "密码错误"
 
 en:
   <<: *zh
   # 英文编码
   0: "success"
   -1: "fail"
+  40000: "System exception"
   40001: "No resources found"
   40002: "Invalid argument"
   40003: "Incorrect account or password"
@@ -25,3 +28,4 @@ en:
   40007: "Verification code expired"
   40008: "Mobile number error"
   40009: "Frequent operation, please try again late"
+  40010: "Password error"
